--- a/docs/.vuepress/override.styl
+++ b/docs/.vuepress/override.styl
@@ -1,22 +1,58 @@
-$accentColor = #9c27b0 // 主题色
+$accentColor = #753a88 // 主题色
 $textColor = #2c3e50 // 文字颜色
 $borderColor = #eaecef // 边框颜色
 $codeBgColor = #282c34 // 代码背景颜色
 
 body {
-  background: #f5f5f5;
+  background: #fff;
 }
 
 .common-class {
   .navbar {
-    border-bottom: 1px solid #fff;
+    background: linear-gradient(to left, #cc2b5e, #753a88 85%);
+    border-bottom: 1px solid $accentColor;
+
+    .site-name {
+      color: #fff;
+    }
+
+    .repo-link, .sidebar-button {
+      svg {
+        color: #fff;
+      }
+    }
+
+    .links {
+      background: none;
+
+      a {
+        color: #fff;
+
+        .arrow {
+          border-top: 6px solid #fff;
+        }
+      }
+
+      .dropdown-item {
+        .nav-link {
+          color: #000;
+        }
+      }
+
+      .router-link-active {
+        border-color: #fff;
+      }
+    }
   }
+
   .sidebar {
     color: #fff;
     background: $accentColor;
     border: none;
+
     a {
       color: #fff;
+
       &.sidebar-link.active {
         border-left-color: #fff;
       }
