--- a/.temp/palette.styl
+++ b/.temp/palette.styl
@@ -1,5 +1,5 @@
 // Theme's Palette
-@import("D:/Blog/blog/node_modules/@vuepress/theme-blog/styles/palette.styl")
+@import("D:/Github/blog/node_modules/_@vuepress_theme-blog@2.3.3@@vuepress/theme-blog/styles/palette.styl")
 
 // User's Palette
-@import("D:/Blog/blog/blog/.vuepress/styles/palette.styl")
+@import("D:/Github/blog/blog/.vuepress/styles/palette.styl")
