--- a/.temp/style.styl
+++ b/.temp/style.styl
@@ -1,5 +1,5 @@
 // Theme's Styles
-@import("D:/Blog/blog/node_modules/@vuepress/theme-blog/styles/index.styl")
+@import("D:/Github/blog/node_modules/_@vuepress_theme-blog@2.3.3@@vuepress/theme-blog/styles/index.styl")
 
 // User's Styles
-@import("D:/Blog/blog/blog/.vuepress/styles/index.styl")
+@import("D:/Github/blog/blog/.vuepress/styles/index.styl")
