--- a/blog/.vuepress/styles/index.styl
+++ b/blog/.vuepress/styles/index.styl
@@ -1,5 +1,6 @@
-/**
- * Custom Styles here.
- *
- * ref：https://v1.vuepress.vuejs.org/config/#index-styl
- */
+.align-center
+    display block
+    margin 0 auto
+
+.token.keyword
+    color #cc99cd
