--- a/blog/.vuepress/styles/palette.styl
+++ b/blog/.vuepress/styles/palette.styl
@@ -13,7 +13,7 @@ $codeBgColor = #282c34
 // $headerBgColor = $bgColor;
 
 $footerBgColor = #555
-$footerColor = #fff
+$footerColor = #d0cccc
 
 // $newsletterBgColor = #f8f8f8
 
