--- a/blog/.vuepress/styles/index.styl
+++ b/blog/.vuepress/styles/index.styl
@@ -8,3 +8,10 @@
 blockquote
     color #9c27b0
     border-color #9c27b0
+    padding-top .1rem
+    padding-bottom .1rem
+    font-size 1rem
+
+.go-to-top
+    background-color #fff
+    padding 6px
